--- a/test/config.yaml
+++ b/test/config.yaml
@@ -1,3 +1,4 @@
 epeverController:
-  serialPort: /dev/ttys000
-  httpPort: 8000
+  serialPort: /dev/ttys004
+  httpPort: 8080
+  collectionPeriod: 30
