split epever into its own package

--- a/package/config.yaml
+++ b/package/config.yaml
@@ -1,4 +1,5 @@
-epeverController:
-  serialPort: /dev/ttyXRUSB0
+solarController:
   httpPort: 8080
-  collectionPeriod: 60
+  epever:
+    serialPort: /dev/ttyXRUSB0
+    cacheExpiry: 30
