--- a/site/package.json
+++ b/site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "epever-site",
+  "name": "solar-controller-site",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8000",
