--- a/test/config.yaml
+++ b/test/config.yaml
@@ -3,3 +3,9 @@ solarController:
   epever:
     serialPort: /dev/ttys004
     cacheExpiry: 30
+  mqtt:
+    host: #ssl://james.messaging.solace.cloud:8883
+    username: victron
+    password: Victron123$$
+    topicSuffix: solar/metrics
+    publishPeriod: 5
