--- a/test/config.yaml
+++ b/test/config.yaml
@@ -1,11 +1,10 @@
 solarController:
   httpPort: 8080
   epever:
-    serialPort: #/dev/ttys004
-    cacheExpiry: 30
+    serialPort: /dev/ttys004
+    publishPeriod: 5
   mqtt:
-    host: #ssl://james.messaging.solace.cloud:8883
+    host: ssl://james.messaging.solace.cloud:8883
     username: victron
     password: Victron123$$
     topicPrefix: solar/metrics
-    publishPeriod: 5
