--- a/test/config.yaml
+++ b/test/config.yaml
@@ -1,13 +1,13 @@
 solarController:
   httpPort: 8080
   epever:
-    serialPort: /dev/ttys004
+    serialPort: /dev/ttys001
     publishPeriod: 5
   victron:
     macAddress:
     publishPeriod: 5
   mqtt:
-    #host: ssl://james.messaging.solace.cloud:8883
-    #username: victron
-    #password: Victron123$$
-    #topicPrefix: solar/metrics
+    host:
+    username:
+    password:
+    topicPrefix: solar/metrics
