--- a/test/config.yaml
+++ b/test/config.yaml
@@ -1,11 +1,15 @@
 solarController:
   httpPort: 8080
-  epever:
-    serialPort: /dev/ttys001
-    publishPeriod: 5
-  victron:
-    macAddress:
-    publishPeriod: 5
+  #epever:
+  #  serialPort: /dev/ttys001
+  #  publishPeriod: 5
+  #victron:
+  #  macAddress:
+  #  publishPeriod: 5
+  #pijuice:
+  #  i2cBus: 1
+  #  i2cAddress: 0x14
+  #  publishPeriod: 5
   mqtt:
     host:
     username:
