--- a/test/config.yaml
+++ b/test/config.yaml
@@ -1,17 +1,13 @@
 solarController:
   httpPort: 8080
-  #epever:
-  #  serialPort: /dev/ttys001
-  #  publishPeriod: 5
+  epever:
+    serialPort: /dev/ttys007
+    publishPeriod: 5
   #victron:
   #  macAddress:
   #  publishPeriod: 5
-  #pijuice:
-  #  i2cBus: 1
-  #  i2cAddress: 0x14
-  #  publishPeriod: 5
-  mqtt:
-    host:
-    username:
-    password:
-    topicPrefix: solar/metrics
+  #mqtt:
+  #  host:
+  #  username:
+  #  password:
+  #  topicPrefix: solar/metrics
