--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -9,6 +9,10 @@ permissions:
   contents: read
   pull-requests: read
 
+env:
+  GO_VERSION: '1.24'
+  NODE_VERSION: '22'
+
 jobs:
   test:
     name: Test
@@ -20,12 +24,12 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v6
         with:
-          go-version: '1.24'
+          go-version: ${{ env.GO_VERSION }}
 
       - name: Set up Node
         uses: actions/setup-node@v6
         with:
-          node-version: '22'
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Install frontend dependencies
         working-directory: ./site
@@ -51,7 +55,20 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v6
         with:
-          go-version: '1.24'
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Set up Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install frontend dependencies
+        working-directory: ./site
+        run: npm ci
+
+      - name: Run ESLint
+        working-directory: ./site
+        run: npm run lint
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
