--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -70,6 +70,10 @@ jobs:
         working-directory: ./site
         run: npm run lint
 
+      - name: Build frontend
+        working-directory: ./site
+        run: npm run build
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
