use the right name for the arm runner

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -125,7 +125,7 @@ jobs:
           retention-days: 1
 
   docker-arm64:
-    runs-on: ubuntu-24.04-arm64
+    runs-on: ubuntu-24.04-arm
     needs: build-site
     outputs:
       image-name: ${{ steps.build.outputs.imageid }}
