add version to frontend, add more delays between reads, and add metrics for individual read timeouts

--- a/.air.toml
+++ b/.air.toml
@@ -3,7 +3,7 @@ testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
-  args_bin = ["-config", "test/config.yaml", "-debug"]
+  args_bin = ["-config", "config.yaml", "-debug"]
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main ./cmd/controller"
   delay = 1000
