Speed up reads and writes.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
     open-pull-requests-limit: 10
     labels:
       - "dependencies"
-      - "go"
+      - "backend"
     commit-message:
       prefix: "chore(deps)"
       include: "scope"
