Add solace as publisher option.

--- a/package/config.yaml
+++ b/package/config.yaml
@@ -11,3 +11,10 @@ solarController:
     username:
     password:
     topicPrefix: solar/metrics
+  solace:
+    enabled: false
+    host:
+    username:
+    password:
+    vpnName: default
+    topicPrefix: solar/metrics
